crates/lingui_macro/tests/snapshots/js_t__js_choice_labels_in_tpl_literal.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t, ph, plural, select, selectOrdinal } from "@lingui/core/macro";

t`We have ${plural({count: getDevelopersCount()}, {one: "# developer", other: "# developers"})}`
t`${select(gender, {male: "he", female: "she", other: "they"})}`
t`${selectOrdinal(count, {one: "#st", two: "#nd", few: "#rd", other: "#th"})}`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "-7z66M",
    message: "We have {count, plural, one {# developer} other {# developers}}",
    values: {
        count: getDevelopersCount()
    }
});
$_i18n._(/*i18n*/ {
    id: "VRptzI",
    message: "{gender, select, male {he} female {she} other {they}}",
    values: {
        gender: gender
    }
});
$_i18n._(/*i18n*/ {
    id: "Q9Q8Bj",
    message: "{count, selectordinal, one {#st} two {#nd} few {#rd} other {#th}}",
    values: {
        count: count
    }
});
