crates/lingui_macro/tests/snapshots/js_t__js_continuation_character.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro';
  t`Multiline\
    string`;

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "eGqEZt",
    message: "Multiline    string"
});
