crates/lingui_macro/tests/snapshots/js_t__js_dedup_values_in_tpl_literal.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from "@lingui/core/macro";
t`Refresh ${foo} inbox ${foo}`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "YZhODz",
    message: "Refresh {foo} inbox {foo}",
    values: {
        foo: foo
    }
});
