crates/lingui_macro/tests/snapshots/js_t__js_ph_labels_in_tpl_literal.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t, ph } from "@lingui/core/macro";

t`Refresh ${ph({foo})} inbox`
t`Refresh ${ph({foo: foo.bar})} inbox`
t`Refresh ${ph({foo: expr()})} inbox`
t`Refresh ${ph({foo: bar, baz: qux})} inbox`
t`Refresh ${ph({})} inbox`
t`Refresh ${ph({...spread})} inbox`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: foo
    }
});
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: foo.bar
    }
});
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: expr()
    }
});
$_i18n._(/*i18n*/ {
    id: "rtxU8c",
    message: "Refresh {foo} inbox",
    values: {
        foo: bar
    }
});
$_i18n._(/*i18n*/ {
    id: "AmeQ8b",
    message: "Refresh {0} inbox",
    values: {
        0: {}
    }
});
$_i18n._(/*i18n*/ {
    id: "AmeQ8b",
    message: "Refresh {0} inbox",
    values: {
        0: {
            ...spread
        }
    }
});
