crates/lingui_macro/tests/snapshots/js_t__js_satisfies_gets_named_placeholder.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro';
t`Variable ${name satisfies string}`;

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "xRRkAE",
    message: "Variable {name}",
    values: {
        name: name satisfies string
    }
});
