crates/lingui_macro/tests/snapshots/js_t__js_should_not_touch_code_if_no_macro_import.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
t`Refresh inbox`;

↓ ↓ ↓ ↓ ↓ ↓

t`Refresh inbox`;
